--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'androidx.wear:wear:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
+//    implementation 'com.github.jinatonic.confetti:confetti:1.1.2'
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$latest_version/
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.21'
+    implementation 'nl.dionsegijn:konfetti:1.2.5'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
